# hymn-selector

./: README.md  pyproject.toml
extra_data/: hymn_lengths.csv
hymn_selector/: history.csv  hymns copy 2.csv  hymns.csv  hymns.ipynb
