[tool.poetry]
name = "hymn_selector"
version = "0.1.0"
description = ""
authors = ["Porter Bagley <pbagley6@gatech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.26.0"
polars = "^0.19.3"
jupyterlab = "^4.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
